# mlprojectfinal

./: .gitignore  README.md  pyproject.toml
src/mlproject/: data.py  pipeline.py  train.py
tests/: test_mlproject.py
