[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = ""
authors = ["aqsaqall <tima.a3135@gmail.com>"]

[tool.poetry.scripts]
train = "mlproject.train:train"

[tool.poetry.dependencies]
python = "^3.9"
joblib = "^1.1.0"
click = "^8.1.3"
mlflow = "^1.25.1"
sklearn = "^0.0"
data = "^0.4"
pipeline = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
